--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
+
     <title>The DM Vault</title>
 </head>
 <body>
     
+
+    <!-- SCRIPTS -->
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
 </body>
 </html>
