--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,30 @@
     <title>The DM Vault</title>
 </head>
 <body>
+    <header>
+        <div class="top-bar">
+            <div class="top-bar-left">
+                <h3>The DM Vault</h3>
+            </div>
+            <div class="top-bar-right">
+                <nav>
+                    <ul class="menu">
+                        <li><a href="#">Add Article</a></li>
+                        <li><a href="#">View Categories</a></li>
+                        <li><a href="#">Register</a></li>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#">Log Out</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        {% block content%}
+        {% endblock %}
+    </main>
+
 
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
