--- a/templates/base.html
+++ b/templates/base.html
@@ -3,29 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
 
     <title>The DM Vault</title>
 </head>
 <body>
     <header>
-        <div class="top-bar">
-            <div class="top-bar-left">
-                <h3>The DM Vault</h3>
-            </div>
-            <div class="top-bar-right">
-                <nav>
-                    <ul class="menu">
-                        <li><a href="#">Add Article</a></li>
-                        <li><a href="#">View Categories</a></li>
-                        <li><a href="#">Register</a></li>
-                        <li><a href="#">Log In</a></li>
-                        <li><a href="#">Log Out</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+        
     </header>
 
     <main>
@@ -35,7 +20,7 @@
 
 
     <!-- SCRIPTS -->
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 
 </body>
