--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,20 @@
 </head>
 <body>
     <header>
-        
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">DM Vault</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="{{ url_for('catalog') }}">Catalog</a></li>
+                    <li><a href="#">Add Books</a></li>
+                    <li><a href="#">Manage Article Categories</a></li>
+                    <li><a href="#">Manage Game Systems</a></li>
+                    <li><a href="#">Register</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Log Out</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <main>
