adding add_article form and functionality
Still work to be done to implement POST function to MongoDB

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
                 <a href="#" class="brand-logo">DM Vault</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('catalog') }}">Catalog</a></li>
-                    <li><a href="#">Add Books</a></li>
+                    <li><a href="{{ url_for('add_article') }}">Add Books</a></li>
                     <li><a href="#">Manage Article Categories</a></li>
                     <li><a href="#">Manage Game Systems</a></li>
                     <li><a href="#">Register</a></li>
@@ -33,6 +33,7 @@
 
 
     <!-- SCRIPTS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 
