--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -1,4 +1,53 @@
 {% extends "base.html" %}
 {% block content %}
-
+    <div class="row">
+        <form class="col s12">
+            <!-- Article Name -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="article_name" name="article_name" type="text" class="validate">
+                    <label for="article_name">Document Name</label>
+                </div>
+            </div>
+            <!-- Author -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="author" name="author" type="text" class="validate">
+                    <label for="author">Author</label>
+                </div>
+            </div>
+            <!-- Category Dropdown -->
+            <div class="row">
+                <div class="input-field col s6">
+                    
+                    <select>
+                        <option value="" disabled selected>Choose your option</option>
+                        {% for category in categories %}
+                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endfor %}
+                    </select>
+                    <label>Category</label>
+                    
+                </div>
+                <!-- Game System Dropdown -->
+                <div class="input-field col s6">
+                    <select>
+                        <option value="" disabled selected>Choose your option</option>
+                        {% for game_system in game_systems %}
+                        <option value="{{ game_system.system_name }}">{{ game_system.system_name }}</option>
+                        {% endfor %}
+                    </select>
+                    <label>Game System</label>
+                </div>
+            </div>
+            <!-- Tags -->
+            <!-- Could be too complicated to implement, will return to this
+            <div class="row">
+                <div class="input-field col s12">
+                    <div class="chips"></div>
+                </div>
+            </div>
+            -->
+        </form>
+    </div>
 {% endblock %}
