--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -1,43 +1,43 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="row">
-        <form class="col s12">
+        <form class="col s12 center-align" method="POST" action="{{ url_for('add_article')}}">
             <!-- Article Name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="article_name" name="article_name" type="text" class="validate">
+                    <input id="article_name" name="article_name" type="text" class="validate" required>
                     <label for="article_name">Document Name</label>
                 </div>
             </div>
             <!-- Author -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="author" name="author" type="text" class="validate">
-                    <label for="author">Author</label>
+                    <input id="article_author" name="article_author" type="text" class="validate" required>
+                    <label for="article_author">Author</label>
                 </div>
             </div>
             <!-- Category Dropdown -->
             <div class="row">
                 <div class="input-field col s6">
                     
-                    <select>
+                    <select id="article_category" name="article_category" class="validate" required>
                         <option value="" disabled selected>Choose your option</option>
                         {% for category in categories %}
                         <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                         {% endfor %}
                     </select>
-                    <label>Category</label>
+                    <label for="article_category">Category</label>
                     
                 </div>
                 <!-- Game System Dropdown -->
                 <div class="input-field col s6">
-                    <select>
+                    <select id="game_system" name="game_system" class="validate" required>
                         <option value="" disabled selected>Choose your option</option>
                         {% for game_system in game_systems %}
                         <option value="{{ game_system.system_name }}">{{ game_system.system_name }}</option>
                         {% endfor %}
                     </select>
-                    <label>Game System</label>
+                    <label for="game_system">Game System</label>
                 </div>
             </div>
             <!-- Tags -->
@@ -48,6 +48,13 @@
                 </div>
             </div>
             -->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button class="btn-large waves-effect waves-light" type="submit" name="action">
+                        Add Article
+                    </button>
+                </div>
+            </div>
         </form>
     </div>
 {% endblock %}
