added register and login functions to their pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,8 @@
                     <li><a href="{{ url_for('add_article') }}">Add Books</a></li>
                     <li><a href="#">Manage Article Categories</a></li>
                     <li><a href="#">Manage Game Systems</a></li>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
                     <li><a href="#">Log Out</a></li>
                 </ul>
             </div>
