added external link field - the main purpose of adding docs to site

--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -16,6 +16,13 @@
                     <label for="article_author">Author</label>
                 </div>
             </div>
+            <!-- Link to Document -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="article_link" name="article_link" type="text" class="validate" required>
+                    <label for="article_link">Link to Article</label>
+                </div>
+            </div>
             <!-- Category Dropdown -->
             <div class="row">
                 <div class="input-field col s6">
