--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -11,7 +11,7 @@
             <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">{{ article.article_name }}<i
                         class="material-icons right">more_vert</i></span>
-                <p><a href="#">This is a link</a></p>
+                <p><a href="{{ article.article_link }}" target="_blank">Link to Document</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">{{ article.article_name }}<i
