--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,32 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row">
+<ul class="col s12 collapsible align-center">
     {% for article in articles %}
-    <div class="col s3">
-        <div class="card">
-            <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{ url_for('static', filename='img/Information_example_page_300px.jpg') }}">
+    <li>
+        <div class="collapsible-header btn-large deep-purple lighten-3"><i class="fas fa-book"></i>{{ article.article_name }}</div>
+        <div class="collapsible-body">
+                <div class="row">
+                    <ul class="col s6">
+                        <li><strong>Author:</strong> {{ article.article_author }}</li>
+                        <li><strong>Category:</strong> {{ article.article_category.title() }}</li>
+                        <li><strong>Game System:</strong> {{ article.game_system }}</li>
+                    </ul>
+
+                    <a class="col s6 btn-large" href="{{ article.article_link }}" target="_blank">Link to Document</a>
+                </div>
             </div>
-            <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">{{ article.article_name }}<i
-                        class="material-icons right">more_vert</i></span>
-                <p><a href="{{ article.article_link }}" target="_blank">Link to Document</a></p>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">{{ article.article_name }}<i
-                        class="material-icons right">close</i></span>
-                <ul>
-                    <li>{{ article.article_author }}</li>
-                    <li>{{ article.article_category }}</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    
-    
+    </li>
     {% endfor %}
-</div>
+</ul>
+
 
   
 
