--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         {% block content%}
         {% endblock %}
     </main>
