added content for add_categories.html, no logic yet

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <header>
         <!-- Dropdown Structure -->
         <ul id="category_dropdown" class="dropdown-content">
-            <li><a href="#!">Create Category</a></li>
+            <li><a href="{{ url_for('add_category') }}">Create Category</a></li>
             <li><a href="#!">Edit Category</a></li>
         </ul>
         <!-- Dropdown Structure -->
