--- a/templates/add_categories.html
+++ b/templates/add_categories.html
@@ -1,4 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-
+    <div class="row">
+        <div class="col s12">
+            <form class="col s12 center-align" method="POST" action="{{ url_for('add_category')}}">
+                <div class="row">
+                    <div class="col input-field s12 center-align">
+                        <input id="category_name" name="category_name" type="text" class="validate">
+                        <label for="category_name">Category Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col input-field s12">
+                        <textarea id="category_desc" name="category_desc" class="materialize-textarea"></textarea>
+                        <label for="category_desc">Category Description</label>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
