--- a/templates/add_categories.html
+++ b/templates/add_categories.html
@@ -15,6 +15,13 @@
                         <label for="category_desc">Category Description</label>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col s12 center-align">
+                        <button class="btn-large waves-effect waves-light" type="submit" name="action">
+                            Add Category
+                        </button>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
