'add game system' functionality completed + added headers on pages

--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="row">
+        <h3 class="center-align">Add Article</h3>
         <form class="col s12 center-align" method="POST" action="{{ url_for('add_article')}}">
             <!-- Article Name -->
             <div class="row">
