--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         </ul>
         <!-- Dropdown Structure -->
         <ul id="game_system_dropdown" class="dropdown-content">
-            <li><a href="#!">Create Game System</a></li>
+            <li><a href="{{ url_for('add_game_system') }}">Create Game System</a></li>
             <li><a href="#!">Edit Game System</a></li>
         </ul>
 
