--- a/templates/add_categories.html
+++ b/templates/add_categories.html
@@ -2,6 +2,7 @@
 {% block content %}
     <div class="row">
         <div class="col s12">
+            <h3 class="center-align">Add Category</h3>
             <form class="col s12 center-align" method="POST" action="{{ url_for('add_category')}}">
                 <div class="row">
                     <div class="col input-field s12 center-align">
