--- a/templates/add_game_systems.html
+++ b/templates/add_game_systems.html
@@ -1,4 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
-
+    <div class="row">
+        <div class="col s12">
+            <h3 class="center-align">Add Game System</h3>
+            <form class="col s12 center-align" method="POST" action="{{ url_for('add_game_system')}}">
+                <div class="row">
+                    <div class="col input-field s12 center-align">
+                        <input id="system_name" name="system_name" type="text" class="validate">
+                        <label for="system_name">Game System Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 center-align">
+                        <button class="btn-large waves-effect waves-light" type="submit" name="action">
+                            Add Game System
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
