added category view, will link the option to edit categories from here

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,12 @@
         <!-- Dropdown Structure -->
         <ul id="category_dropdown" class="dropdown-content">
             <li><a href="{{ url_for('add_category') }}">Create Category</a></li>
-            <li><a href="#!">Edit Category</a></li>
+            <li><a href="{{ url_for('view_categories') }}">View Categories</a></li>
         </ul>
         <!-- Dropdown Structure -->
         <ul id="game_system_dropdown" class="dropdown-content">
             <li><a href="{{ url_for('add_game_system') }}">Create Game System</a></li>
-            <li><a href="#!">Edit Game System</a></li>
+            <li><a href="#!">View Game Systems</a></li>
         </ul>
 
 
