added view_game_systems.html and added functionality for it

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <!-- Dropdown Structure -->
         <ul id="game_system_dropdown" class="dropdown-content">
             <li><a href="{{ url_for('add_game_system') }}">Create Game System</a></li>
-            <li><a href="#!">View Game Systems</a></li>
+            <li><a href="{{ url_for('view_game_systems') }}">View Game Systems</a></li>
         </ul>
 
 
