--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -3,16 +3,18 @@
     <div class="row">
         <div class="col s12">
             <h3 class="center-align">Add Category</h3>
-            <form class="col s12 center-align" method="POST" action="{{ url_for('edit_category')}}">
+            <form class="col s12 center-align" method="POST" action="{{ url_for('edit_category', category_id=category._id)}}">
                 <div class="row">
                     <div class="col input-field s12 center-align">
-                        <input id="category_name" name="category_name" type="text" class="validate">
+                        <input id="category_name" name="category_name" value="{{ category.category_name }}" type="text" class="validate">
                         <label for="category_name">Category Name</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col input-field s12">
-                        <textarea id="category_desc" name="category_desc" class="materialize-textarea"></textarea>
+                        <textarea id="category_desc" name="category_desc" class="materialize-textarea">
+                            {{- category.category_desc -}}
+                        </textarea>
                         <label for="category_desc">Category Description</label>
                     </div>
                 </div>
