--- a/templates/view_categories.html
+++ b/templates/view_categories.html
@@ -8,7 +8,16 @@
                     {{ category.category_name.title() }}
                 </div>
                 <div class="collapsible-body">
-                    {{ category.category_desc }}
+                    <div class="row">
+                        <div class="col s9">
+                            {{ category.category_desc }}
+                        </div>
+                        <div class="col s3">
+                            <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small light-blue accent-4">Edit Category</a>
+                        </div>
+                    </div>
+                    
+                    
                 </div>
             </li>
         {% endfor %}
