added headers and buttons
Added headers to all pages
Added buttons to view_categoires and view_game_systems

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h3 class="center-align">The Catalog</h3>
+
 <ul class="col s12 collapsible align-center">
     {% for article in articles %}
     <li>
