--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+
+    <h3 class="center-align">Edit Category</h3>
+
     <div class="row">
         <div class="col s12">
             <h3 class="center-align">Add Category</h3>
