--- a/templates/view_categories.html
+++ b/templates/view_categories.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
+
+    <h3 class="center-align">View Categories</h3>
+
+    <div class="row">
+        <div class="col s12">
+            <a href="{{ url_for('add_category') }}" class="btn-large light-blue accent-4 right-align">Add Category</a>
+        </div>
+    </div>
     
     <ul class="collapsible align-center">
         {% for category in categories %}
@@ -16,8 +24,6 @@
                             <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small light-blue accent-4">Edit Category</a>
                         </div>
                     </div>
-                    
-                    
                 </div>
             </li>
         {% endfor %}
