added footer, styling on 'add new' button for categories and game systems

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,20 @@
     </main>
 
 
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                Created by Conor Creagh-Peschau
+            </div>
+        </div>
+    </footer>
+
     <!-- SCRIPTS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
