--- a/templates/view_categories.html
+++ b/templates/view_categories.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col s12">
-            <a href="{{ url_for('add_category') }}" class="btn-large light-blue accent-4 right-align">Add Category</a>
+            <a href="{{ url_for('add_category') }}" class="btn-large light-blue accent-4 right">Add Category</a>
         </div>
     </div>
     
