--- a/templates/view_game_systems.html
+++ b/templates/view_game_systems.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col s12">
-            <a href="{{ url_for('add_game_system') }}" class="btn-large light-blue accent-4 right-align">Add Game System</a>
+            <a href="{{ url_for('add_game_system') }}" class="btn-large light-blue accent-4 right">Add Game System</a>
         </div>
     </div>
 
@@ -16,7 +16,7 @@
                     {{ game_system.system_name }}
                 </div>
                 <div class="collapsible-body">
-                    {{ game_system.created_by }}
+                    <p> <strong>Created By:</strong> {{ game_system.created_by }}</p> 
                 </div>
             </li>
         {% endfor %}
