--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
 
 
         <nav>
-            <div class="nav-wrapper">
-                <a href="{{ url_for('catalog') }}" class="brand-logo">DM Vault</a>
+            <div class="nav-wrapper black">
+                <a href="{{ url_for('catalog') }}" class="brand-logo">The DM Vault</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('catalog') }}">Catalog</a></li>
                     
@@ -51,7 +51,7 @@
 
 
 
-    <footer class="page-footer">
+    <footer class="page-footer black">
         <div class="container">
             <div class="row">
 
