added option to edit articles, added backend logic to edit articles

--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col s12">
-            <h3 class="center-align">Add Category</h3>
+            <h3 class="center-align">Edit Category</h3>
             <form class="col s12 center-align" method="POST" action="{{ url_for('edit_category', category_id=category._id)}}">
                 <div class="row">
                     <div class="col input-field s12 center-align">
