--- a/templates/view_categories.html
+++ b/templates/view_categories.html
@@ -17,11 +17,14 @@
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
-                        <div class="col s9">
+                        <div class="col s6">
                             {{ category.category_desc }}
                         </div>
                         <div class="col s3">
                             <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small light-blue accent-4">Edit Category</a>
+                        </div>
+                        <div class="col s3">
+                            <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small light-blue accent-4">Delete</a>
                         </div>
                     </div>
                 </div>
