--- a/templates/view_game_systems.html
+++ b/templates/view_game_systems.html
@@ -16,9 +16,13 @@
                     <div class="col s6">
                         {{ game_system.system_name }}
                     </div>
-                    <div class="col s6">
+                    <div class="col s3">
                         <a href="{{ url_for('edit_game_system', game_system_id=game_system._id) }}"
                             class="btn-small light-blue accent-4 right">Edit Game System</a>
+                    </div>
+                    <div class="col s3">
+                        <a href="{{ url_for('delete_game_system', game_system_id=game_system._id) }}"
+                            class="btn-small light-blue accent-4 right">Delete</a>
                     </div>
                 </div>
             </li>
