--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- STYLESHEET IMPORTS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    
+    <!-- LOCAL STYLESHEETS-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
 
     <title>The DM Vault</title>
@@ -25,7 +30,7 @@
 
         <nav>
             <div class="nav-wrapper black">
-                <a href="{{ url_for('catalog') }}" class="brand-logo">The DM Vault</a>
+                <a href="{{ url_for('catalog') }}" class="brand-logo cursive" id="main-title">The DM Vault</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('catalog') }}">Catalog</a></li>
                     
@@ -57,7 +62,7 @@
 
             </div>
         </div>
-        <div class="footer-copyright">
+        <div class="footer-copyright cursive">
             <div class="container">
                 Created by Conor Creagh-Peschau
             </div>
