--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,8 @@
                     <li><a href="{{ url_for('catalog') }}">Catalog</a></li>
                     
                     {% if session.user %}
-                        <li><a href="{{ url_for('add_article') }}">Add Books</a></li>
-                        <li><a class="dropdown-trigger" href="#!" data-target="category_dropdown">Manage Article Categories<i class="fas fa-angle-down prefix"></i></a></li>
+                        <li><a href="{{ url_for('add_article') }}">Add Article</a></li>
+                        <li><a class="dropdown-trigger" href="#!" data-target="category_dropdown">Manage Categories<i class="fas fa-angle-down prefix"></i></a></li>
 
                         <li><a class="dropdown-trigger" href="#!" data-target="game_system_dropdown">Manage Game Systems<i class="fas fa-angle-down prefix"></i></a></li>
                         <li><a href="{{ url_for('logout') }}">Log Out: {{ session.user }}</a></li>
