--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -33,12 +33,14 @@
                         <div class="row">
                             <a class="col btn s6 right" href="{{ article.article_link }}" target="_blank">Link to Document</a>
                         </div>
-                        <div class="row">
-                            <a class="col btn s6 right" href="{{ url_for('edit_article', article_id=article._id) }}">Edit Article</a>
-                        </div>
-                        <div class="row">
-                            <a class="col btn s6 right red darken-4" href="{{ url_for('delete_article', article_id=article._id) }}">Delete Article</a>
-                        </div>
+                        {% if session["user"] %}
+                            <div class="row">
+                                <a class="col btn s6 right" href="{{ url_for('edit_article', article_id=article._id) }}">Edit Article</a>
+                            </div>
+                            <div class="row">
+                                <a class="col btn s6 right red darken-4" href="{{ url_for('delete_article', article_id=article._id) }}">Delete Article</a>
+                            </div>
+                        {% endif %}
                     </div>
                     
                 </div>
