added input validation for text fields

--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -6,21 +6,21 @@
             <!-- Article Name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="article_name" name="article_name" type="text" class="validate" required>
+                    <input id="article_name" name="article_name" type="text" class="validate" minlength="5" maxlength="60" required>
                     <label for="article_name">Document Name</label>
                 </div>
             </div>
             <!-- Author -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="article_author" name="article_author" type="text" class="validate" required>
+                    <input id="article_author" name="article_author" type="text" class="validate" minlength="5" maxlength="60" required>
                     <label for="article_author">Author</label>
                 </div>
             </div>
             <!-- Link to Document -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="article_link" name="article_link" type="text" class="validate" required>
+                    <input id="article_link" name="article_link" type="text" class="validate" minlength="10" maxlength="200" required>
                     <label for="article_link">Link to Article</label>
                 </div>
             </div>
