--- a/templates/add_categories.html
+++ b/templates/add_categories.html
@@ -6,13 +6,13 @@
             <form class="col s12 center-align" method="POST" action="{{ url_for('add_category')}}">
                 <div class="row">
                     <div class="col input-field s12 center-align">
-                        <input id="category_name" name="category_name" type="text" class="validate">
+                        <input id="category_name" name="category_name" type="text" class="validate" minlength="5" maxlength="60" required>
                         <label for="category_name">Category Name</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col input-field s12">
-                        <textarea id="category_desc" name="category_desc" class="materialize-textarea"></textarea>
+                        <textarea id="category_desc" name="category_desc" class="materialize-textarea" minlength="2" maxlength="500" required></textarea>
                         <label for="category_desc">Category Description</label>
                     </div>
                 </div>
