--- a/templates/add_game_systems.html
+++ b/templates/add_game_systems.html
@@ -6,7 +6,7 @@
             <form class="col s12 center-align" method="POST" action="{{ url_for('add_game_system')}}">
                 <div class="row">
                     <div class="col input-field s12 center-align">
-                        <input id="system_name" name="system_name" type="text" class="validate">
+                        <input id="system_name" name="system_name" type="text" class="validate" minlength="5" maxlength="60" required>
                         <label for="system_name">Game System Name</label>
                     </div>
                 </div>
