--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -9,13 +9,13 @@
             <form class="col s12 center-align" method="POST" action="{{ url_for('edit_category', category_id=category._id)}}">
                 <div class="row">
                     <div class="col input-field s12 center-align">
-                        <input id="category_name" name="category_name" value="{{ category.category_name }}" type="text" class="validate">
+                        <input id="category_name" name="category_name" value="{{ category.category_name }}" type="text" class="validate" minlength="3" maxlength="100" required>
                         <label for="category_name">Category Name</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col input-field s12">
-                        <textarea id="category_desc" name="category_desc" class="materialize-textarea">
+                        <textarea id="category_desc" name="category_desc" class="materialize-textarea" minlength="2" maxlength="500" required>
                             {{- category.category_desc -}}
                         </textarea>
                         <label for="category_desc">Category Description</label>
