--- a/templates/edit_game_system.html
+++ b/templates/edit_game_system.html
@@ -7,14 +7,14 @@
             <form class="col s12 center-align" method="POST" action="{{ url_for('edit_game_system', game_system_id=game_system._id)}}">
                 <div class="row">
                     <div class="col input-field s12 center-align">
-                        <input id="system_name" name="system_name" value="{{ game_system.system_name }}" type="text" class="validate">
+                        <input id="system_name" name="system_name" value="{{ game_system.system_name }}" type="text" class="validate" minlength="5" maxlength="75" required>
                         <label for="system_name">Game System</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
                         <button class="btn-large waves-effect waves-light" type="submit" name="action">
-                            Update Category
+                            Update Game System
                         </button>
                     </div>
                 </div>
