--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -22,7 +22,7 @@
     <ul class="col s12 center-align">
         {% for article in articles %}
         <li>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
 
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
