--- a/templates/view_categories.html
+++ b/templates/view_categories.html
@@ -13,7 +13,7 @@
         <ul class="center-align">
             {% for category in categories %}
                 <li>
-                    <div class="col s4">
+                    <div class="col s12 m6 l4">
                         <div class="card small-card blue-grey darken-1">
                             <div class="card-content white-text">
                                 <span class="card-title"><strong>{{ category.category_name.title() }}</strong></span>
