--- a/templates/view_game_systems.html
+++ b/templates/view_game_systems.html
@@ -13,7 +13,7 @@
         <ul class="center-align">
             {% for game_system in game_systems %}
                 <li>
-                    <div class="col s4">
+                    <div class="col s12 m6 l4">
                         <div class="card small-card blue-grey darken-1">
                             <div class="card-content white-text">
                                 <span class="card-title"><strong>{{ game_system.system_name }}</strong></span>
