added mobile dropdown menu functionality to increase responsiveness

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
         <nav>
             <div class="nav-wrapper black">
                 <a href="{{ url_for('catalog') }}" class="brand-logo cursive" id="main-title">The DM Vault</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('catalog') }}">Catalog</a></li>
                     
@@ -47,6 +48,20 @@
                 </ul>
             </div>
         </nav>
+
+        <ul class="sidenav" id="mobile-demo">
+            <li><a href="{{ url_for('catalog') }}">Catalog</a></li>
+                {% if session.user %}
+                    <li><a href="{{ url_for('add_article') }}">Add Article</a></li>
+                    <li><a class="dropdown-trigger" href="#!" data-target="category_dropdown">Manage Categories<i class="fas fa-angle-down prefix"></i></a></li>
+
+                    <li><a class="dropdown-trigger" href="#!" data-target="game_system_dropdown">Manage Game Systems<i class="fas fa-angle-down prefix"></i></a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out: {{ session.user }}</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                {% endif %}
+        </ul>
     </header>
 
     <main class="container">
