fixed styling issue for view_categories and view_game_systems

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -26,10 +26,20 @@ main {
     min-height: 200px;
 }
 
+
+
 .card .card-content {
     height: 250px;
 }
 
 .card .card-action {
+    height: 65px;
+}
+
+.small-card .card-content {
+    height: 150px;
+}
+
+.small-card .card-action {
     height: 65px;
 }
